# whisper-finetuning-be

./: .gitignore  Makefile  belarusian_text_normalizer.py  custom_trainer.py  ds_config.json  pyproject.toml  readme.md  requirements.txt  run.sh  run_base.sh  run_debug.sh  run_eval_whisper_streaming.py  run_small.sh  run_speech_recognition_seq2seq_streaming.py  setup_env.sh
bash_runners/: eval_cv11_test.sh  eval_fleurs_test.sh  run_base.sh  run_eval_cv11.sh  run_small.sh  run_small_ds.sh
eda/: trainer_lr_scheduler.ipynb
prepare_dataset/: make_dataset.py  test_make_dataset.py
